// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Courses /> renders correctly for 3 course 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  height: 80px;
  padding-top: 20px;
  padding-right: 80px;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 h6 {
  font-weight: bold;
  font-size: 20px;
  line-height: 23px;
  margin: 0;
  color: black;
}

.c2 p {
  font-weight: bold;
  font-size: 20px;
  line-height: 23px;
  margin: 0;
  color: #828282;
}

.c2 img {
  width: 12px;
  height: 12px;
  margin-left: 10px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  padding: 0 80px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 22%;
  min-width: 250px;
  height: 197px;
  cursor: pointer;
  background: white;
  border: 1px solid;
  border-radius: 8px;
  margin: 1.5%;
  padding: 25px;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 p {
  font-weight: bold;
  font-size: 20px;
  line-height: 23px;
  text-align: start;
  margin: 0;
  color: black;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c5 p {
  font-weight: bold;
  font-size: 16px;
  line-height: 19px;
  text-align: start;
  margin: 0;
  color: #898989;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 100%;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 28px;
  border-radius: 43px;
  margin-right: 10px;
  padding-left: 10px;
  padding-right: 10px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 p {
  white-space: nowrap;
  font-weight: bold;
  font-size: 12px;
  color: black;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <h6>
        Sort By  
      </h6>
      <p>
        recommended
      </p>
      <img
        alt="sort"
        src="down-arrow.png"
      />
    </div>
  </div>
  <div
    className="c3"
  >
    <div
      className="c4"
      onClick={[Function]}
      style={
        Object {
          "borderColor": "#C9E1AA",
        }
      }
    >
      <div
        className="c5"
      >
        <p>
          TEST 1101
        </p>
        <img
          alt="save course"
          src="bookmark.svg"
        />
      </div>
      <p>
        Intro to Design
      </p>
      <div
        className="c6"
      >
        <div
          className="c7"
          style={
            Object {
              "background": "#BAE6FF",
            }
          }
        >
          <p>
            4 Credits
          </p>
        </div>
        <div
          className="c7"
          style={
            Object {
              "background": "#FFE5A1",
            }
          }
        >
          <p>
            Fall, Spring
          </p>
        </div>
      </div>
    </div>
    <div
      className="c4"
      onClick={[Function]}
      style={
        Object {
          "borderColor": "#FFCBBA",
        }
      }
    >
      <div
        className="c5"
      >
        <p>
          TEST 1102
        </p>
        <img
          alt="save course"
          src="bookmark.svg"
        />
      </div>
      <p>
        Intro to Design
      </p>
      <div
        className="c6"
      >
        <div
          className="c7"
          style={
            Object {
              "background": "#BAE6FF",
            }
          }
        >
          <p>
            4 Credits
          </p>
        </div>
        <div
          className="c7"
          style={
            Object {
              "background": "#FFE5A1",
            }
          }
        >
          <p>
            Fall, Spring
          </p>
        </div>
      </div>
    </div>
    <div
      className="c4"
      onClick={[Function]}
      style={
        Object {
          "borderColor": "#D3D2F7",
        }
      }
    >
      <div
        className="c5"
      >
        <p>
          TEST 1103
        </p>
        <img
          alt="save course"
          src="bookmark.svg"
        />
      </div>
      <p>
        Intro to Design
      </p>
      <div
        className="c6"
      >
        <div
          className="c7"
          style={
            Object {
              "background": "#BAE6FF",
            }
          }
        >
          <p>
            4 Credits
          </p>
        </div>
        <div
          className="c7"
          style={
            Object {
              "background": "#FFE5A1",
            }
          }
        >
          <p>
            Fall, Spring
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Courses /> renders correctly for no courses 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  height: 80px;
  padding-top: 20px;
  padding-right: 80px;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 h6 {
  font-weight: bold;
  font-size: 20px;
  line-height: 23px;
  margin: 0;
  color: black;
}

.c2 p {
  font-weight: bold;
  font-size: 20px;
  line-height: 23px;
  margin: 0;
  color: #828282;
}

.c2 img {
  width: 12px;
  height: 12px;
  margin-left: 10px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  padding: 0 80px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <h6>
        Sort By  
      </h6>
      <p>
        recommended
      </p>
      <img
        alt="sort"
        src="down-arrow.png"
      />
    </div>
  </div>
  <div
    className="c3"
  />
</div>
`;

exports[`<Courses /> renders correctly for one course 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  height: 80px;
  padding-top: 20px;
  padding-right: 80px;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 h6 {
  font-weight: bold;
  font-size: 20px;
  line-height: 23px;
  margin: 0;
  color: black;
}

.c2 p {
  font-weight: bold;
  font-size: 20px;
  line-height: 23px;
  margin: 0;
  color: #828282;
}

.c2 img {
  width: 12px;
  height: 12px;
  margin-left: 10px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  padding: 0 80px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 22%;
  min-width: 250px;
  height: 197px;
  cursor: pointer;
  background: white;
  border: 1px solid;
  border-radius: 8px;
  margin: 1.5%;
  padding: 25px;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 p {
  font-weight: bold;
  font-size: 20px;
  line-height: 23px;
  text-align: start;
  margin: 0;
  color: black;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c5 p {
  font-weight: bold;
  font-size: 16px;
  line-height: 19px;
  text-align: start;
  margin: 0;
  color: #898989;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 100%;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 28px;
  border-radius: 43px;
  margin-right: 10px;
  padding-left: 10px;
  padding-right: 10px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 p {
  white-space: nowrap;
  font-weight: bold;
  font-size: 12px;
  color: black;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <h6>
        Sort By  
      </h6>
      <p>
        recommended
      </p>
      <img
        alt="sort"
        src="down-arrow.png"
      />
    </div>
  </div>
  <div
    className="c3"
  >
    <div
      className="c4"
      onClick={[Function]}
      style={
        Object {
          "borderColor": "#C9E1AA",
        }
      }
    >
      <div
        className="c5"
      >
        <p>
          TEST 1101
        </p>
        <img
          alt="save course"
          src="bookmark.svg"
        />
      </div>
      <p>
        Intro to Design
      </p>
      <div
        className="c6"
      >
        <div
          className="c7"
          style={
            Object {
              "background": "#BAE6FF",
            }
          }
        >
          <p>
            4 Credits
          </p>
        </div>
        <div
          className="c7"
          style={
            Object {
              "background": "#FFE5A1",
            }
          }
        >
          <p>
            Fall, Spring
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
